kubernetes/istio/order-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-virtual-service
  namespace: async
spec:
  hosts:
  - "*"
  gateways:
  - order-gateway
  http:
  - match:
    - uri:
        exact: /order
    route:
    - destination:
        host: order-service
        port:
          number: 3000
