kubernetes/istio/rabbitmq-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-virtual-service
  namespace: async
spec:
  hosts:
  - "*"
  gateways:
  - rabbitmq-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rabbitmq
        port:
          number: 15672
